test/should-fail/jfxc1476B.fx
/*
 * @test/compile-error
 */
Nonexistent {};
jfxc1476A.Another{}.f(3);


